--- a/.github\workflows/terraform.yml
+++ b/.github\workflows/terraform.yml
@@ -13,7 +13,7 @@ on:
       - terraform/**
 
 env:
-  # Credentials for AWS
+  # Credentials for AWS Web Console
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   # S3 Bucket for Terraform State
